# snake

./: .env  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  justfile
hack/: tekton-0.16.0.yaml
hack/tools/: BUILD  deps.bzl  install.sh  tools.go
pkg/version/: BUILD.bazel
scheduler/: BUILD.bazel  README.md  controller.go  main.go  mutatingwebhook.go
scheduler/config/: deployment.yaml  kustomization.yaml  namespace.yaml  scheduler_webhook_patch.yaml
scheduler/config/cert-manager/: certificate.yaml
scheduler/config/rbac/: role.yaml  rolebinding.yaml  serviceaccount.yaml
scheduler/config/webhook/: change_webhook_client_config_namespace.yaml  change_webhook_config_name.yaml  kustomization.yaml  manifests.yaml  service.yaml
scheduler/pkg/buildnum/: buildnum.go
scheduler/pkg/constants/: BUILD.bazel  constants.go
