load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//hack/gen:controller-gen.bzl", "gen_manifests")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "mutatingwebhook.go",
    ],
    importpath = "blockheads/go/snake/scheduler",
    visibility = ["//visibility:public"],
    deps = [
        "//go/snake/scheduler/pkg/constants:go_default_library",
        "@com_github_tektoncd_pipeline//pkg/apis/pipeline/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/config:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager/signals:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission:go_default_library",
    ],
)

go_binary(
    name = "scheduler",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

gen_manifests(
    pkg_name = "scheduler",
    role_name = "snake-scheduler",
)
